force-app/main/default/objects/AA_Branch_Working_Hour__c/AA_Branch_Working_Hour__c.object-meta.xml
<CustomObject>
    <description>The hours where the branch opens and closes</description>
    <label>AA Branch Working Hour</label>
    <nameField>
        <label>AA Branch Working Hour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AA Branch Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>