force-app/main/default/objects/AA_Branch_Working_Hour__c/fields/Admin_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Admin_Close_Time__c</fullName>
    <description>Similar to the Admin_Open_Time</description>
    <label>Admin Close Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>