force-app/main/default/objects/AA_Branch_Working_Hour__c/fields/Admin_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Admin_Open_Time__c</fullName>
    <description>This field is used to draw the admin calendar. Usually is earlier than the Open_Time__c and is used by the branch admin to schedule special appointments before official opening</description>
    <inlineHelpText>This field is used to draw the admin calendar. Usually is earlier than the Open_Time__c and is used by the branch admin to schedule special appointments before official opening</inlineHelpText>
    <label>Admin Open Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>