force-app/main/default/objects/AA_Branch_Working_Hour__c/fields/Business_Branch__c.field-meta.xml
<CustomField>
    <fullName>Business_Branch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Branch</label>
    <referenceTo>AA_Business_Branch__c</referenceTo>
    <relationshipLabel>Branch Working Hours</relationshipLabel>
    <relationshipName>Branch_Working_Hours</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>