force-app/main/default/objects/AA_Branch_Working_Hour__c/fields/Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Close_Time__c</fullName>
    <label>Close Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>