force-app/main/default/objects/AA_Branch_Working_Hour__c/fields/Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Week__c</fullName>
    <label>Day Of Week</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Day_Of_Weeks</valueSetName>
    </valueSet>
</CustomField>