force-app/main/default/objects/AA_Branch_Working_Hour__c/fields/Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Time__c</fullName>
    <label>Open Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>