force-app/main/default/objects/AA_Branch_Working_Hour__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Branch__c</columns>
    <columns>Day_Of_Week__c</columns>
    <columns>Open_Time__c</columns>
    <columns>Close_Time__c</columns>
    <columns>Admin_Open_Time__c</columns>
    <columns>Admin_Close_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>